# Truffle

./: .env.example  .gitignore  CONTRIBUTING.md  PRD.md  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
agent/: diagnose.py  diagnose_stub.py  explain.py  grounding.py  loop.py  render.py  schema.py
agent/prompts/: diagnose_system.md  explain_system.md  parse_system.md
backtest/: __init__.py  config.py  engine.py  errors.py  metrics.py  tearsheet.py
core/: compile_context.py  compiler.py  diagnose.py  duals.py  exceptions.py  ir.py  irbase.py  patch.py  report.py  report_semantics.py  routing.py  sensitivity.py  solve.py
core/constraints/: __init__.py  cardinality.py  cvar_limit.py  factor_exposure.py  group_cap.py  tracking_error_cap.py  transaction_cost.py  turnover_cap.py
core/objectives/: __init__.py  max_sharpe.py  min_tracking_error.py  risk_parity.py
data/: estimation.py  inputs.py  scenarios.py
evaluation/: __init__.py  benchmark.jsonl  io.py  models.py  normalize.py  run.py  score.py
examples/: benchmark_sample.csv  factors_sample.csv  sectors_sample.csv  spec_cardinality.yaml  spec_cvar_limit.yaml  spec_factor_exposure.yaml  spec_group_cap.yaml  spec_max_sharpe.yaml  spec_min_tracking_error.yaml  spec_risk_parity.yaml  spec_tracking_error.yaml  spec_turnover_txcost.yaml
paper/: __init__.py  alpaca_data.py  experiment.py  ideal.py  journal.py  ledger.py  live_shadow.py  models.py  planner.py  provider.py  readiness.py  report.py  risk.py  simulator.py
tests/: test_agent_parse_policy.py  test_agent_parse_sprint3.py  test_agent_parse_sprint4.py  test_agent_schema.py  test_alpaca_data.py  test_backtest.py  test_cardinality.py  test_cli.py  test_compiler_objective.py  test_conditional_duals.py  test_constraints_convex.py  test_diagnose.py  test_diagnose_agent.py  test_duals.py  test_elastic_ir.py  test_estimation.py  test_evaluation.py  test_explain_conditional.py  test_grounding.py  test_inputs.py  test_live_shadow.py  test_mip_incumbent.py  test_mip_ux.py  test_numeric_boundaries.py  test_objectives_convex.py  test_paper_execution.py  test_paper_experiment.py  test_paper_journal.py  test_paper_ledger.py  test_paper_provider.py  test_paper_readiness.py  test_public_api.py  test_render_sprint3.py  test_report_invariants.py  test_report_semantics.py  test_routing.py  test_scenarios.py  test_sensitivity_semantics.py  test_sprint4_dod.py  test_w_prev.py
truffle/: __init__.py  api.py
