[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truffle"
version = "0.0.1"
description = "Natural-language portfolio optimization with a typed IR and a deterministic compiler."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Truffle authors" }]
dependencies = [
    "cvxpy>=1.5",
    "clarabel>=0.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
]
alpaca-data = [
    "httpx>=0.28,<1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Mixed-integer quadratic programs (cardinality + a variance/mean-variance
# objective, or cardinality + a tracking-error cone) route to SCIP via
# cvxpy's PySCIPOpt interface. Apache-2.0, free;
# the wheel bundles the SCIP binaries. MILPs (cardinality + min-CVaR) use HiGHS,
# which already ships with cvxpy, so this extra is only needed for MIQP/MISOCP.
mip = [
    "pyscipopt>=5.0",
]

[project.scripts]
truffle = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["agent*", "backtest*", "core*", "data*", "evaluation*", "paper*", "truffle*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
agent = ["prompts/*.md"]
evaluation = ["benchmark.jsonl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# B008: Typer requires typer.Argument/Option calls in defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
